2015-07-02  Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>

	* am/eptex.am: Add libmd5.a.
	* pdfutils.ch: Add primitive \pdfmdfivesum to e-(u)pTeX.
	* eptex.defines: Add getmd5sum().
	* eptex.ech, eptex_version.h: Change version to 150702.

2015-06-22  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/eptx.am: Use $(tie_c) and $(tie_m).

2015-04-12  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* eptrip/eptrip.diffs: Updated for TL 2015.

2014-12-12  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* eptriptest: Complain early if (e)trip.fmt is not created.
	Inspired by report from vvv, tlbuild 14 Jun 2011 10:25:47.

2014-12-10  Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>

	* eptex.ech: Fix bugs in \fontcharwd etc.
	* eptex_version.h: Change version to 141210.

2014-11-19  Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>

	* eptex.ech: Fix a bug introduced in the primitive \lastnodechar.
	* eptex_version.h: Change version to 141119.

2014-11-09  Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>

	* eptex.ech: Improve the new primitive \lastnodechar.
	* eptex_version.h: Change version to 141109.

2014-11-08  Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>

	* pdfutils.ch, eptex.ech: Add primitives \pdfshellescape and
	\lastnodechar to e-(u)ptex.
	* eptex_version.h: Change version to 141108.

2014-05-05  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>
2014-05-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* pdfutils.ch, eptex.defines: Add a primitive \pdffiledump for
	eptex.

2014-05-02  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* eptrip/eptrip.diffs: Updated for TL14.

2014-01-22  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* eptrip/etrip.{log,tex} (removed): Renamed ...
	* eptrip/eptrip.{log,tex} (new): ... into these.
	* eptriptest, am/eptex.am: Adapted.
	* eptrip/eptrip.{diffs,log}: Updated for e-pTeX 3.14159265.

2014-01-20  Peter Breitenlohner  <peb@mppmu.mpg.de>

	TeX tuneup of 2014.
	* eptex.ech: Adapt to TeX Version 3.14159265.

2014-01-17  Peter Breitenlohner  <peb@mppmu.mpg.de>
